--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.7.1",
     "socket.io": "^4.5.1",
     "sucrase": "^3.25.0",
+    "systeminformation": "^5.12.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
